MDEV-13786 compiler complains about uninitialized variable.

'=0' added to meke the compiler happy.